--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -32,88 +32,7 @@ dataSources:
         - event: NewExperimentalVault(indexed address,indexed address,address,string)
           handler: handleNewExperimentalVault
       file: ./src/mappings/registryMappings.ts
-  # UNCOMMENT FOR EXPERIMENTAL VAULTS
-  # 2 Vault USDC
-  - kind: ethereum/contract
-    name: yvUSDC
-    network: {{network}}
-    source:
-      startBlock: 11390000
-      address: '0xe2F6b9773BF3A015E2aA70741Bde1498bdB9425b'
-      abi: Vault
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.3
-      language: wasm/assemblyscript
-      file: ./src/mappings/vaults/yvUSDCVaultMappings.ts
-      entities:
-        - Vault
-        - Transaction
-        - Strategy
-        - VaultUpdate
-        - Transfer
-        - Account
-        - AccountUpdate
-        - AccountVaultBalance
-        - Token
-      abis:
-        - name: ERC20
-          file: ./abis/ERC20Detailed.json
-        - name: Vault
-          file: ./abis/Vault.json
-      eventHandlers:
-        - event: StrategyAdded(indexed address,uint256,uint256,uint256)
-          handler: handleStrategyAdded
-        - event: StrategyReported(indexed address,uint256,uint256,uint256,uint256,uint256,uint256,uint256)
-          handler: handleStrategyReported
-        - event: Transfer(indexed address,indexed address,uint256)
-          handler: handleTransfer
-      callHandlers:
-        - function: deposit(uint256)
-          handler: handleDeposit
-        - function: withdraw(uint256)
-          handler: handleWithdrawal   
-
-  # 3 Vault DAI
-  - kind: ethereum/contract
-    name: yvDAI
-    network: {{network}}
-    source:
-      startBlock: 11390000
-      address: '0xBFa4D8AA6d8a379aBFe7793399D3DdaCC5bBECBB'
-      abi: Vault
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.3
-      language: wasm/assemblyscript
-      file: ./src/mappings/vaults/yvDAIVaultMappings.ts
-      entities:
-        - Vault
-        - Transaction
-        - Strategy
-        - VaultUpdate
-        - Transfer
-        - Account
-        - AccountUpdate
-        - AccountVaultBalance
-        - Token
-      abis:
-        - name: ERC20
-          file: ./abis/ERC20Detailed.json
-        - name: Vault
-          file: ./abis/Vault.json
-      eventHandlers:
-        - event: StrategyAdded(indexed address,uint256,uint256,uint256)
-          handler: handleStrategyAdded
-        - event: StrategyReported(indexed address,uint256,uint256,uint256,uint256,uint256,uint256,uint256)
-          handler: handleStrategyReported
-        - event: Transfer(indexed address,indexed address,uint256)
-          handler: handleTransfer
-      callHandlers:
-        - function: deposit(uint256)
-          handler: handleDeposit
-        - function: withdraw(uint256)
-          handler: handleWithdrawal   
+ 
 templates:
   # 1 Vault (template)
   - name: Vault
@@ -143,12 +62,12 @@ templates:
       eventHandlers:
         - event: StrategyAdded(indexed address,uint256,uint256,uint256)
           handler: handleStrategyAdded
-        - event: StrategyReported(indexed address,uint256,uint256,uint256,uint256,uint256,uint256,uint256)
-          handler: handleStrategyReported
-        - event: Transfer(indexed address,indexed address,uint256)
-          handler: handleTransfer
-      callHandlers:
-        - function: deposit(uint256)
-          handler: handleDeposit
-        - function: withdraw(uint256)
-          handler: handleWithdrawal
+        # - event: StrategyReported(indexed address,uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+        #   handler: handleStrategyReported
+        # - event: Transfer(indexed address,indexed address,uint256)
+        #   handler: handleTransfer
+      # callHandlers:
+      #   - function: deposit(uint256)
+      #     handler: handleDeposit
+      #   - function: withdraw(uint256)
+      #     handler: handleWithdrawal
