--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -31,6 +31,8 @@ dataSources:
           handler: handleNewVault
         - event: NewExperimentalVault(indexed address,indexed address,address,string)
           handler: handleNewExperimentalVault
+        - event: Vaultaddress,string)
+          handler: handleVaultTagged
       file: ./src/mappings/registryMappings.ts
  
 templates:
