feat: adds deposits logic (#29)

--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -72,8 +72,18 @@ templates:
         # - event: Transfer(indexed address,indexed address,uint256)
         #   handler: handleTransfer
       # TODO: failing in graph sync at block #11595706  
-      # callHandlers:
-      #   - function: deposit(uint256)
-      #     handler: handleDeposit
-      #   - function: withdraw(uint256)
-      #     handler: handleWithdrawal
+      callHandlers:
+        - function: deposit()
+          handler: handleDeposit
+        - function: deposit(uint256)
+          handler: handleDepositWithAmount
+        - function: deposit(uint256,address)
+          handler: handleDepositWithAmountAndRecipient
+        - function: withdraw()
+          handler: handleWithdraw
+        - function: withdraw(uint256)
+          handler: handleWithdrawWithShares
+        - function: withdraw(uint256,address)
+          handler: handleWithdrawWithSharesAndRecipient
+        # - function: withdraw(uint256,address,uint256)
+        #   handler: handleWithdrawWithSharesRecipientAndMaxLoss
