Fix: Handle both Versions of the addStrategy Function (#65)
* feat: adding new entities and improvements/fixes

* feat: handling both versions of addStrategy function

* feat: handling both versions of addStrategy function

* feat: adding custom addStrategy handler for CurveSETHVault only

--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -66,7 +66,37 @@ dataSources:
         - event: VaultTagged(address,string)
           handler: handleVaultTagged
       file: ./src/mappings/registryMappings.ts
- 
+  # 3 Custom CurveSETHVault From: 11870013 to 11881933
+  - kind: ethereum/contract
+    name: CurveSETHVault
+    network: {{network}}
+    source:
+      startBlock: {{startBlockCurveSETHVault}}
+      address: '{{CurveSETHVault}}'
+      abi: Vault
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Vault
+        - Transaction
+        - Strategy
+      abis:
+        - name: Registry
+          file: ./abis/Registry.json
+        - name: Vault
+          file: ./abis/Vault.json
+        - name: ERC20
+          file: ./abis/ERC20Detailed.json
+        - name: Strategy
+          file: ./abis/StrategyAPI.json
+      callHandlers:
+        # V2: addStrategy(strategy,debtRatio,minDebtPerHarvest,maxDebtPerHarvest,performanceFee)
+        - function: addStrategy(address,uint256,uint256,uint256,uint256)
+          handler: handleAddStrategyV2
+      file: ./src/mappings/curveSETHVaultMappings.ts
+
 templates:
   # 1 Vault (template)
   - name: Vault
@@ -100,8 +130,6 @@ templates:
         - name: Strategy
           file: ./abis/StrategyAPI.json
       eventHandlers:
-        - event: StrategyAdded(indexed address,uint256,uint256,uint256)
-          handler: handleStrategyAdded
         - event: StrategyReported(indexed address,uint256,uint256,uint256,uint256,uint256,uint256,uint256)
           handler: handleStrategyReported
         - event: Transfer(indexed address,indexed address,uint256)
@@ -119,6 +147,12 @@ templates:
           handler: handleWithdrawWithShares
         - function: withdraw(uint256,address)
           handler: handleWithdrawWithSharesAndRecipient
+        # V1: addStrategy(strategy,debtRatio,rateLimit,performanceFee)
+        - function: addStrategy(address,uint256,uint256,uint256)
+          handler: handleAddStrategy
+        # V2: addStrategy(strategy,debtRatio,minDebtPerHarvest,maxDebtPerHarvest,performanceFee)
+        - function: addStrategy(address,uint256,uint256,uint256,uint256)
+          handler: handleAddStrategyV2
 
   - name: Strategy
     kind: ethereum/contract
