--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -91,6 +91,11 @@ dataSources:
           file: ./abis/ERC20Detailed.json
         - name: Strategy
           file: ./abis/StrategyAPI.json
+      eventHandlers:
+        - event: UpdatePerformanceFee(uint256)
+          handler: handleUpdatePerformanceFee
+        - event: UpdateManagementFee(uint256)
+          handler: handleUpdateManagementFee
       callHandlers:
         # V2: addStrategy(strategy,debtRatio,minDebtPerHarvest,maxDebtPerHarvest,performanceFee)
         - function: addStrategy(address,uint256,uint256,uint256,uint256)
@@ -134,6 +139,10 @@ templates:
           handler: handleStrategyReported
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
+        - event: UpdatePerformanceFee(uint256)
+          handler: handleUpdatePerformanceFee
+        - event: UpdateManagementFee(uint256)
+          handler: handleUpdateManagementFee
         - event: StrategyAddedToQueue(indexed address)
           handler: handleStrategyAddedToQueue
         - event: StrategyRemovedFromQueue(indexed address)
