Fix strategies without reports (and harvest txs) (#79)
* feat: fix strategies without reports (and havest txs)

* feat: fix PR comments

--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -142,6 +142,8 @@ templates:
           file: ./abis/Oracle.json
       eventHandlers:
         - event: StrategyReported(indexed address,uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+          handler: handleStrategyReported_v0_3_0_v0_3_1
+        - event: StrategyReported(indexed address,uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256)
           handler: handleStrategyReported
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
