--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "build:kovan": "yarn prepare:kovan && graph build",
     "build:rinkeby": "yarn prepare:rinkeby && graph build",
     "build:mainnet": "yarn prepare:mainnet && graph build",
+    "build:fantom": "yarn prepare:fantom && graph build",
     "thegraph:deploy:kovan": "yarn build:kovan && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ salazarguille/yearn-vaults-v2-subgraph-kovan",
     "thegraph:deploy:rinkeby": "yarn build:rinkeby && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ salazarguille/yearn-vaults-v2-subgraph-rinkeby",
     "thegraph:deploy:mainnet": "yarn build:mainnet && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ salazarguille/yearn-vaults-v2-subgraph-mainnet",
+    "thegraph:deploy:fantom": "yarn build:fantom && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ yearn/yearn-vaults-v2-fantom",
     "create-local": "graph create --node http://127.0.0.1:8020/ yearn-vaults-v2/subgraph",
     "remove-local": "graph remove --node http://127.0.0.1:8020/ yearn-vaults-v2/subgraph",
     "deploy-local": "yarn build:mainnet && graph deploy --node http://127.0.0.1:8020/ --ipfs http://localhost:5001 yearn-vaults-v2/subgraph",
     "prepare:kovan": "mustache config/kovan.json subgraph.template.yaml > subgraph.yaml",
     "prepare:rinkeby": "mustache config/rinkeby.json subgraph.template.yaml > subgraph.yaml",
     "prepare:mainnet": "mustache config/mainnet.json subgraph.template.yaml > subgraph.yaml",
+    "prepare:fantom": "mustache config/fantom.json subgraph.template.yaml > subgraph.yaml",
     "deploy:kovan": "yarn prepare:kovan && yarn build:kovan && yarn thegraph:deploy:kovan",
     "deploy:rinkeby": "yarn prepare:rinkeby && yarn build:rinkeby && yarn thegraph:deploy:rinkeby",
+    "deploy:fantom": "yarn prepare:fantom && yarn build:fantom && yarn thegraph:deploy:fantom",
     "release": "standard-version",
     "deploy:mainnet": "yarn prepare:mainnet && yarn build:mainnet && yarn thegraph:deploy:mainnet",
     "lint:check": "prettier --check './**'",
@@ -28,8 +32,8 @@
     "postpublish": "pinst --enable"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.21.0",
-    "@graphprotocol/graph-ts": "0.20.1",
+    "@graphprotocol/graph-cli": "0.22.1",
+    "@graphprotocol/graph-ts": "0.22.1",
     "mustache": "4.1.0"
   },
   "devDependencies": {
